--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.3.2",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.9.1"
   }
 }
